<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minimal</string>
    <string name="action_settings">Settings</string>
    <string name="no_to_dos">You don\'t have any todos</string>
    <string name="title">Title</string>
    <string name="remind_me">Remind Me</string>
    <string name="choose_date">Date</string>
    <string name="choose_time">Time</string>
    <string name="remind_date_and_time">Reminder set for %1$s, %2$s %3$s</string>
    <string name="about">About</string>
    <string name="app_version">Version: %1$s</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">Made by Avjinder</string>
    <string name="done_label">Done</string>
    <string name="date_reminder_default">Today</string>
    <string name="date_error_check_again">The date you entered is in the past.</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_on_summary">Night mode is on</string>
    <string name="night_mode_off_summary">Night mode is off</string>

    <string-array name="snooze_options">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>

    <string name="snooze">Snooze</string>
    <string name="remove">Remove</string>
    <string name="todo_error">Please enter a Todo</string>
    <string name="transaction_output">Transaction output empty.</string>
    <string name="sumup_title">Sumup Payment</string>
    <string name="contact_entry_message">Please enter your contact details for a receipt of </string>
    <string name="payment_sum" translatable="false">2.15</string>
    <string name="email_address_title">E-mail address:</string>
    <string name="phone_title">Phone number (+*******):</string>
    <string name="contact_entry_button_title">Proceed to payment</string>
    <string name="login_button_title">Login</string>
    <string name="charge_button_title">Charge</string>
    <string name="request_auth_code_button">Get Auth</string>
    <string name="request_token_button">Get Token</string>
    <string name="request_receipt_button">Get last receipt</string>
    <string name="receipt_invalid_token">Access token expired. Please login again, then press receipt button.</string>
    <string name="login_message_success">Login successful.</string>
    <string name="login_message_fail_token">Invalid Token. Please try again.</string>
    <string name="login_message_fail_params">Invalid params.</string>
    <string name="login_message_fail_location">Please enable location on device.</string>
    <string name="login_message_fail_internet">Please enable Internet connection on device.</string>
    <string name="login_message_fail_logged_in">Already logged in.</string>
    <string name="transaction_code_label">Transaction code:</string>
    <string name="tx_message_login_first">Please login first.</string>

</resources>
