<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.avjindersinghsekhon.minimaltodo.SumupActivity">

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login_button_title"
        android:layout_gravity="center"
        style="?android:attr/buttonBarButtonStyle"
        />

    <Button
        android:id="@+id/button_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/charge_button_title"
        android:layout_gravity="center"
        style="?android:attr/buttonBarButtonStyle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:id="@+id/button_request_auth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:text="@string/request_auth_code_button"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/button_request_token"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:text="@string/request_token_button"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/button_request_receipt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:text="@string/request_receipt_button"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/output_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/outputView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_output"
                android:textColor="@android:color/holo_blue_light"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
